🎉 INT COMMIT: 优化细节

--- a/source/_posts/标签/主题标签.md
+++ b/source/_posts/标签/主题标签.md
@@ -16,7 +16,7 @@ comments:
 copyright: true
 copyright_author: 
 copyright_author_href: https://blog.wuyuxi.cn/
-copyright_url: https://blog.wuyuxi.cn/posts/tagplugins.html
+copyright_url: 
 ai: 
   - "这篇文章介绍了主题标签Tag Plugins，是一个能够帮助提升文章权重和博主认知度的标签，可用于博文、日记和笔记等多种形式的内容。通过使用Ta标签，可以快速定位感兴趣的话题和关键字。此外，还提供了一些Tag Plugins相关的服务，如搜索和热门标签推荐等。"
   - 这篇文章介绍了主题标签Tag Plugins，是一个能够帮助提升文章权重和博主认知度的标签，可用于博文、日记和笔记等多种形式的内容。通过使用Ta标签，可以快速定位感兴趣的话题和关键字，可以用于文章内快速书写相应格式的html
