🎉 INT COMMIT:  优化细节

--- a/source/_posts/vue/页面加载进度条实现.md
+++ b/source/_posts/vue/页面加载进度条实现.md
@@ -3,6 +3,8 @@ title: 页面加载进度条实现
 date: 2023-10-26 21:43:02
 tags: 
     - vue
+categories: 
+    - vue
 ---
 
 实现页面顶部显示页面加载线性进度条的效果，可以使用 Vue 自带的 NProgress 库。具体实现方法如下：
