🎉 INT COMMIT: 优化

--- a/source/_posts/vue/部署阿里云服务器.md
+++ b/source/_posts/vue/部署阿里云服务器.md
@@ -5,6 +5,8 @@ tags:
     - vue
 categories: 
    - vue
+top_img: "https://cdnjson.com/images/2023/10/26/2e767c800ee1b636068d67ba2f9c3eb7.png"
+cover: "https://cdnjson.com/images/2023/10/26/2e767c800ee1b636068d67ba2f9c3eb7.png"
 ---
 
 ## 部署前准备
