--- a/source/_posts/vue/页面加载进度条实现.md
+++ b/source/_posts/vue/页面加载进度条实现.md
@@ -5,6 +5,8 @@ tags:
     - vue
 categories: 
     - vue
+top_img: "https://cdnjson.com/images/2023/10/26/4da110928d5f05e9ec955c5c2f68b526.png"
+cover: "https://cdnjson.com/images/2023/10/26/4da110928d5f05e9ec955c5c2f68b526.png"
 ---
 
 实现页面顶部显示页面加载线性进度条的效果，可以使用 Vue 自带的 NProgress 库。具体实现方法如下：
