--- a/source/_posts/标签/主题标签.md
+++ b/source/_posts/标签/主题标签.md
@@ -7,8 +7,8 @@ tags:
 categories: 
   - 前端开发
 description: 添加大量外挂标签样式。
-top_img: "https://img02.anheyu.com/adminuploads/1/2022/09/05/6315e146a8bbd.webp"
-cover: "https://img02.anheyu.com/adminuploads/1/2022/09/05/6315e146a8bbd.webp"
+top_img: "https://cdnjson.com/images/2023/10/26/6f240c4c1d6fcd0e4b21bd7617d12f0f.png"
+cover: "https://cdnjson.com/images/2023/10/26/6f240c4c1d6fcd0e4b21bd7617d12f0f.png"
 swiper_index: 6
 abbrlink: tagplugins
 date: 2023-10-26 15:05:44
