--- a/source/_posts/vue/部署阿里云服务器.md
+++ b/source/_posts/vue/部署阿里云服务器.md
@@ -1,10 +1,10 @@
 ---
-title: 部署阿里云服务器
+title: SpringBoot + Vue 部署阿里云服务器
 date: 2023-10-26 21:48:22
 tags:
     - vue
 categories: 
-   - vue
+    - vue
 top_img: "https://cdnjson.com/images/2023/10/26/2e767c800ee1b636068d67ba2f9c3eb7.png"
 cover: "https://cdnjson.com/images/2023/10/26/2e767c800ee1b636068d67ba2f9c3eb7.png"
 ---
@@ -13,7 +13,7 @@ cover: "https://cdnjson.com/images/2023/10/26/2e767c800ee1b636068d67ba2f9c3eb7.p
 
 ### 一、vue
 
-###### 1.新建文件 
+#### 1.新建文件 
 
  .env.development 
 
@@ -42,7 +42,7 @@ const request = axios.create({
 })
 ```
 
-###### **2.文件上传地址修改、导出地址修改，vue工程全局搜索 localhost:9090  替换成  $baseUrl**
+#### **2.文件上传地址修改、导出地址修改，vue工程全局搜索 localhost:9090  替换成  $baseUrl**
 
 ```vue
 :action="$baseUrl + '/file/upload'"
@@ -54,7 +54,7 @@ const request = axios.create({
 
 ```
 
-###### 3.**注意**：**在Manager的 mouted函数里加上这个判断即可 防止用户在未登录的情况下进入首页**
+#### 3.**注意**：**在Manager的 mouted函数里加上这个判断即可 防止用户在未登录的情况下进入首页**
 
 ```vue
 mounted() {   // 页面加载完成之后触发
@@ -66,7 +66,7 @@ mounted() {   // 页面加载完成之后触发
 
 改完之后，重新打包vue生成dist目录并上传到/home/server/springboot+vue/vue
 
-###### 4.打包
+#### 4.打包
 
 npm run build
 
@@ -94,7 +94,7 @@ springboot+vue目录下包含Java目录和vue目录
 
 上传vue打包后的dist文件夹到/home/server/springboot+vue/vue目录
 
-![image-20231004161939327](C:\Users\86187\AppData\Roaming\Typora\typora-user-images\image-20231004161939327.png)
+![](https://cdnjson.com/images/2023/10/27/image.png)
 
 ##### 2.设置 application.yml 覆盖
 
@@ -135,13 +135,13 @@ chmod +x *
 
 完成后的目录文件(不包含server.log)：
 
-![image-20231004161541350](C:\Users\86187\AppData\Roaming\Typora\typora-user-images\image-20231004161541350.png)
+![](https://cdnjson.com/images/2023/10/27/imageae67e4dda38123f3.png)
 
-##### 5.**部署vue**
+#### 5.**部署vue**
 
-###### 1.nginx配置
+#### 1.nginx配置
 
-![image-20231004161719436](C:\Users\86187\AppData\Roaming\Typora\typora-user-images\image-20231004161719436.png)
+![](https://cdnjson.com/images/2023/10/27/imagea289d26309031c9c.png)
     
 
 ```conf
@@ -161,7 +161,7 @@ server {
 }
 ```
 
-###### 2.配置完之后记得重启nginx
+#### 2.配置完之后记得重启nginx
 
 执行命令重启： 
 
@@ -194,7 +194,7 @@ cd /home/server/springboot+vue/java
 
 端口：
 
-![image-20231006221518563](C:\Users\86187\AppData\Roaming\Typora\typora-user-images\image-20231006221518563.png)
+![](https://cdnjson.com/images/2023/10/27/imagea97e3c197d6282b8.png)
 
 ```
 查看被占用的9090端口：
@@ -205,20 +205,20 @@ sudo kill -9 9236  # 9236为PID
 
 实时查看日志：**tail -100f server.log**
 
-![image-20231004163230479](C:\Users\86187\AppData\Roaming\Typora\typora-user-images\image-20231004163230479.png)
+![](https://cdnjson.com/images/2023/10/27/imagee0a120405cedb028.png)
 
 设置防火墙端口 3306、设置防火墙端口 9090
 
-![image-20231004163131361](C:\Users\86187\AppData\Roaming\Typora\typora-user-images\image-20231004163131361.png)
+![](https://cdnjson.com/images/2023/10/27/imageaaada9b587e205ff.png)
 
 查看后台服务是否启动成功：
 
 116.62.64.100:9090
 
-![image-20231004163535299](C:\Users\86187\AppData\Roaming\Typora\typora-user-images\image-20231004163535299.png)
+![](https://cdnjson.com/images/2023/10/27/imageb64bef102b20be4f.png)
 
 浏览器访问：
 
 http://116.62.64.100/
 
-![image-20231004163619697](C:\Users\86187\AppData\Roaming\Typora\typora-user-images\image-20231004163619697.png)
+![](https://cdnjson.com/images/2023/10/27/image5817a1e3bfe22ede.png)
