🎉 INT COMMIT: 优化

--- a/source/_posts/博客/图床方案汇总.md
+++ b/source/_posts/博客/图床方案汇总.md
@@ -7,17 +7,18 @@ tags:
 categories:
   - 前端开发
 description: 使用图床来存储图片
-top_img: "https://cdnjson.com/images/2023/10/28/4.webp"
-cover: "https://cdnjson.com/images/2023/10/28/4.webp"
+top_img: "https://cdnjson.com/images/2023/10/29/4.webp"
+cover: "https://cdnjson.com/images/2023/10/29/4.webp"
 ai:
   - "使用图床是一种常见的图片托管解决方案，特别适用于需要在网页、博客或社交媒体上分享图片的情况。图床允许用户将图片上传到云端服务器，从而减轻了本地存储和带宽的压力，同时确保了图片的稳定可访问性。通过使用图床，用户可以轻松分享图片链接，实现快速加载和共享图像，提高了网络体验和内容传播的效率。"
 ---
 
-# {% note red 'anzhiyufont anzhiyu-icon-fan' simple%}前言{% endnote %}
+{% tip cogs %}前言{% endtip %}
 
 Markdown 作为程序员不可或缺的轻量级标记语言，使技术创作者能够专注于内容创作，避免了不同平台间繁琐的排版工作。然而，Markdown 的图片存储问题仍然是一个挑战，因为不同平台有各自的图片管理方式。在不使用图床的情况下，同一篇文章需要在不同平台上单独上传图片，这过于繁琐。为了优化这个问题，我们需要寻找更便捷的方式来管理和引用 Markdown 文件中的图片。
 
-# {% note pink 'anzhiyufont anzhiyu-icon-bullhorn' simple%}目前最好的解决办法就是使用图床来存储图片{% endnote %}
+# {% note red 'anzhiyufont anzhiyu-icon-fan' simple%}目前最好的解决办法就是使用图床来存储图片{% endnote %}
+
 
 ### 常用公共图床
 
