🎉 INT COMMIT:  优化

--- a/source/_posts/博客/图床方案汇总.md
+++ b/source/_posts/博客/图床方案汇总.md
@@ -119,7 +119,7 @@ TinyPNG采用无损压缩，而Imagestool采用有损压缩。虽然肉眼难以
 
 > 星际文件系统（InterPlanetary File System，简称IPFS）是一项分布式的Web和点对点超媒体协议。它的目标是提供一个更快、更安全、更开放的互联网体验，并有望取代传统的HTTP协议。
 
-{% link IPFS 图床,简约速度较快,https://xlcoud.eu.org/, https://blog.wuyuxi.cn/img/friend_404.gif %}
+{% link IPFS 图床,简约速度较快,https://xlcoud.eu.org/, https://blog.wuyuxi.cn/img/autumn.png %}
 
 ### 私有部署图床服务
 
