🎉 INT COMMIT: 优化

--- a/source/_posts/vue/部署阿里云服务器.md
+++ b/source/_posts/vue/部署阿里云服务器.md
@@ -1,15 +1,16 @@
 ---
 title: SpringBoot + Vue 部署阿里云服务器
 date: 2023-10-26 21:48:22
-aside: false
 tags:
-    - vue
-categories: 
-    - vue
-top_img: "https://cdnjson.com/images/2023/10/26/2e767c800ee1b636068d67ba2f9c3eb7.png"
-cover: "https://cdnjson.com/images/2023/10/26/2e767c800ee1b636068d67ba2f9c3eb7.png"
+  - vue
+categories:
+  - vue
+top_img: 'https://cdnjson.com/images/2023/10/26/2e767c800ee1b636068d67ba2f9c3eb7.png'
+cover: 'https://cdnjson.com/images/2023/10/26/2e767c800ee1b636068d67ba2f9c3eb7.png'
 ai:
-  - 部署前准备的步骤包括配置Vue项目、打包Vue和SpringBoot项目、创建服务器目录、上传文件、设置nginx、配置MySQL、启动后台程序等，最终实现了前后端分离的部署。
+  - >-
+    部署前准备的步骤包括配置Vue项目、打包Vue和SpringBoot项目、创建服务器目录、上传文件、设置nginx、配置MySQL、启动后台程序等，最终实现了前后端分离的部署。
+abbrlink: d73c622a
 ---
 
 ## 部署前准备
