--- a/source/_posts/博客/主题标签.md
+++ b/source/_posts/博客/主题标签.md
@@ -1,26 +1,31 @@
 ---
-title: "主题标签 Tag Plugins"
+title: 主题标签 Tag Plugins
 highlight_shrink: false
 tags:
   - 博客
-categories: 
+categories:
   - 前端开发
 description: 添加大量外挂标签样式。
-sticky: 100 # 文章置顶 ，数值越大，置顶越高
-top_img: "https://cdnjson.com/images/2023/10/26/6f240c4c1d6fcd0e4b21bd7617d12f0f.png"
-cover: "https://cdnjson.com/images/2023/10/26/6f240c4c1d6fcd0e4b21bd7617d12f0f.png"
+sticky: 100
+top_img: 'https://cdnjson.com/images/2023/10/26/6f240c4c1d6fcd0e4b21bd7617d12f0f.png'
+cover: 'https://cdnjson.com/images/2023/10/26/6f240c4c1d6fcd0e4b21bd7617d12f0f.png'
 swiper_index: 6
+copyright: true
+copyright_author_href: 'https://blog.wuyuxi.cn/'
+ai:
+  - >-
+    这篇文章介绍了主题标签Tag
+    Plugins，是一个能够帮助提升文章权重和博主认知度的标签，可用于博文、日记和笔记等多种形式的内容。通过使用Ta标签，可以快速定位感兴趣的话题和关键字。此外，还提供了一些Tag
+    Plugins相关的服务，如搜索和热门标签推荐等。
+  - >-
+    这篇文章介绍了主题标签Tag
+    Plugins，是一个能够帮助提升文章权重和博主认知度的标签，可用于博文、日记和笔记等多种形式的内容。通过使用Ta标签，可以快速定位感兴趣的话题和关键字，可以用于文章内快速书写相应格式的html
+  - 这篇文章介绍了主题标签，在hexo主题AnZhiYu中可以使用Tag Plugins快速完成对应的标签生成书写。
+abbrlink: b9f7c887
 date: 2023-10-26 15:05:44
 comments:
-copyright: true
-copyright_author: 
-copyright_author_href: https://blog.wuyuxi.cn/
-copyright_url: 
-ai: 
-  - "这篇文章介绍了主题标签Tag Plugins，是一个能够帮助提升文章权重和博主认知度的标签，可用于博文、日记和笔记等多种形式的内容。通过使用Ta标签，可以快速定位感兴趣的话题和关键字。此外，还提供了一些Tag Plugins相关的服务，如搜索和热门标签推荐等。"
-  - 这篇文章介绍了主题标签Tag Plugins，是一个能够帮助提升文章权重和博主认知度的标签，可用于博文、日记和笔记等多种形式的内容。通过使用Ta标签，可以快速定位感兴趣的话题和关键字，可以用于文章内快速书写相应格式的html
-  - 这篇文章介绍了主题标签，在hexo主题AnZhiYu中可以使用Tag Plugins快速完成对应的标签生成书写。
-
+copyright_author:
+copyright_url:
 ---
 
 <!-- {% note blue 'anzhiyufont anzhiyu-icon-bullhorn' simple %}
@@ -417,6 +422,11 @@ Demo 4 - 自定义 Tab 名 + 只有 icon + icon 和 Tab 名
 <!-- endtab -->
 
 {% endtabs%}
+
+
+
+
+
 
 ## 按钮 btns
 
