🎉 INT COMMIT: 更新，修复bug

--- a/source/_posts/文学世界/抬头春草.md
+++ b/source/_posts/文学世界/抬头春草.md
@@ -3,14 +3,12 @@ title: 我想抬头暖阳春草，你给我简单拥抱。
 abbrlink: a6a29f53
 date: 2023-10-29 17:21:42
 tags:
-- 加密文章
-password: yubo
-abstract: 有东西被加密了, 请输入密码查看.
-message: 您好, 这里需要密码.
-theme: shrink # 可以在线挑选你喜欢的主题,并应用到你的博客中: default、blink、shrink、flip、up、surge、wave、xray
-
-wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
-wrong_hash_message: 抱歉, 这个文章不能被校验, 不过您还是能看看解密后的内容.
+- 诗歌
+categories: 文学世界
+top_img: "https://www4.bing.com//th?id=OHR.SavannahSculpture_ZH-CN7663694208_UHD.jpg"
+cover: "https://cn.bing.com//th?id=OHR.AutumnRaven_ZH-CN7897841947_UHD.jpg"
+ai: 
+    - 本文探讨了抬头仰望蓝天、感受暖阳和春草的美好，以及这些简单拥抱带来的力量。它们唤醒内心，提醒我们珍惜当下，追求生活的真正美好。生活中的幸福源于这些简单而纯粹的拥抱。
 ---
 
 当抬头，暖阳春草：简单拥抱的力量
