--- a/source/_posts/文学世界/烧饼歌.md
+++ b/source/_posts/文学世界/烧饼歌.md
@@ -1,7 +1,7 @@
 ---
 title: 烧饼歌
 tags: 诗歌
-categories: 诗歌
+categories: 文学世界
 top_img: >-
   https://dogefs.s3.ladydaily.com/~/source/wallhaven/full/gp/wallhaven-gpmg53.jpg?w=2560&h=1440&fmt=webp
 cover: >-
