--- a/source/_posts/科技前沿/图床方案汇总.md
+++ b/source/_posts/科技前沿/图床方案汇总.md
@@ -1,9 +1,9 @@
 ---
 title: 图床方案汇总
 tags:
-  - 博客
+  - 图床
 categories:
-  - 前端开发
+  - 科技前沿
 description: 使用图床来存储图片
 top_img: 'https://cdnjson.com/images/2023/10/29/4.webp'
 cover: 'https://cdnjson.com/images/2023/10/29/4.webp'
