--- a/source/_posts/科技前沿/页面加载进度条实现.md
+++ b/source/_posts/科技前沿/页面加载进度条实现.md
@@ -1,9 +1,9 @@
 ---
 title: 页面加载进度条实现
 tags:
-  - vue
+  - Vue
 categories:
-  - vue
+  - 科技前沿
 top_img: 'https://cdnjson.com/images/2023/10/26/4da110928d5f05e9ec955c5c2f68b526.png'
 cover: 'https://cdnjson.com/images/2023/10/26/4da110928d5f05e9ec955c5c2f68b526.png'
 ai:
