--- a/source/_posts/科技前沿/主题标签.md
+++ b/source/_posts/科技前沿/主题标签.md
@@ -1,10 +1,10 @@
 ---
-title: 主题标签 Tag Plugins
+title: Tag Plugins
 highlight_shrink: false
 tags:
-  - 博客
+  - 主题标签
 categories:
-  - 前端开发
+  - 科技前沿
 description: 添加大量外挂标签样式。
 sticky: 100
 top_img: 'https://cdnjson.com/images/2023/10/26/6f240c4c1d6fcd0e4b21bd7617d12f0f.png'
