--- a/source/_posts/科技前沿/部署阿里云服务器.md
+++ b/source/_posts/科技前沿/部署阿里云服务器.md
@@ -2,9 +2,9 @@
 title: SpringBoot + Vue 部署阿里云服务器
 date: 2023-10-26 21:48:22
 tags:
-  - vue
+  - 部署云服务器
 categories:
-  - vue
+  - 科技前沿
 top_img: 'https://cdnjson.com/images/2023/10/26/2e767c800ee1b636068d67ba2f9c3eb7.png'
 cover: 'https://cdnjson.com/images/2023/10/26/2e767c800ee1b636068d67ba2f9c3eb7.png'
 ai:
