🎉 INT COMMIT:  升级版本，修复bug

--- a/source/_posts/科技前沿/图床方案汇总.md
+++ b/source/_posts/科技前沿/图床方案汇总.md
@@ -18,7 +18,7 @@ date: 2023-10-28 22:49:26
 
 Markdown 作为程序员不可或缺的轻量级标记语言，使技术创作者能够专注于内容创作，避免了不同平台间繁琐的排版工作。然而，Markdown 的图片存储问题仍然是一个挑战，因为不同平台有各自的图片管理方式。在不使用图床的情况下，同一篇文章需要在不同平台上单独上传图片，这过于繁琐。为了优化这个问题，我们需要寻找更便捷的方式来管理和引用 Markdown 文件中的图片。
 
-# {% note red 'anzhiyufont anzhiyu-icon-fan' simple%}目前最好的解决办法就是使用图床来存储图片{% endnote %}
+# {% note red 'anzhiyufont' simple%}目前最好的解决办法就是使用图床来存储图片{% endnote %}
 
 
 ### 常用公共图床
