🎉 INT COMMIT: 优化

--- a/source/_posts/科技前沿/主题标签.md
+++ b/source/_posts/科技前沿/主题标签.md
@@ -7,8 +7,8 @@ categories:
   - 科技前沿
 description: 添加大量外挂标签样式。
 sticky: 100
-top_img: 'https://cdnjson.com/images/2023/10/26/6f240c4c1d6fcd0e4b21bd7617d12f0f.png'
-cover: 'https://cdnjson.com/images/2023/10/26/6f240c4c1d6fcd0e4b21bd7617d12f0f.png'
+top_img: 'https://pic.imgdb.cn/item/6550b2a0c458853aeffd3b6b.png'
+cover: 'https://pic.imgdb.cn/item/6550b2a0c458853aeffd3b6b.png'
 swiper_index: 6
 copyright: true
 copyright_author_href: 'https://blog.wuyuxi.cn/'
