--- a/source/_posts/科技前沿/部署阿里云服务器.md
+++ b/source/_posts/科技前沿/部署阿里云服务器.md
@@ -5,8 +5,8 @@ tags:
   - 部署云服务器
 categories:
   - 科技前沿
-top_img: 'https://cdnjson.com/images/2023/10/26/2e767c800ee1b636068d67ba2f9c3eb7.png'
-cover: 'https://cdnjson.com/images/2023/10/26/2e767c800ee1b636068d67ba2f9c3eb7.png'
+top_img: 'https://pic.imgdb.cn/item/6550c486c458853aef41934f.png'
+cover: 'https://pic.imgdb.cn/item/6550c486c458853aef41934f.png'
 ai:
   - >-
     部署前准备的步骤包括配置Vue项目、打包Vue和SpringBoot项目、创建服务器目录、上传文件、设置nginx、配置MySQL、启动后台程序等，最终实现了前后端分离的部署。
