--- a/source/_posts/科技前沿/页面加载进度条实现.md
+++ b/source/_posts/科技前沿/页面加载进度条实现.md
@@ -4,8 +4,8 @@ tags:
   - Vue
 categories:
   - 科技前沿
-top_img: 'https://cdnjson.com/images/2023/10/26/4da110928d5f05e9ec955c5c2f68b526.png'
-cover: 'https://cdnjson.com/images/2023/10/26/4da110928d5f05e9ec955c5c2f68b526.png'
+top_img: 'https://pic.imgdb.cn/item/6550c677c458853aef49cea7.png'
+cover: 'https://pic.imgdb.cn/item/6550c677c458853aef49cea7.png'
 ai:
   - >-
     要在Vue项目中实现页面顶部显示页面加载线性进度条的效果，可以使用Vue自带的NProgress库。首先安装NProgress库，然后在LoginView.vue中引入NProgress库和样式文件。在登录方法中使用NProgress，在请求开始前调用NProgress.start()，请求结束后调用NProgress.done()。如果需要修改进度条颜色，可以在node_modules/nprogress/nprogress.css文件中进行修改，或者在App.vue中设置样式。通过以上步骤，即可实现页面加载时的进度条效果。
