--- a/source/_posts/健康生活/你心目中的白月光.md
+++ b/source/_posts/健康生活/你心目中的白月光.md
@@ -13,7 +13,7 @@ ai:
 ---
 
 <div align=center class="aspect-ratio">
-    <iframe src="https://player.bilibili.com/player.html?aid=824272389&&page=1&as_wide=1&high_quality=1&danmaku=0"
+    <iframe src="https://player.bilibili.com/player.html?bvid=BV1s94y1b7nB"
     scrolling="no"
     border="0"
     frameborder="no"
