优化图片加载速度

--- a/source/_posts/健康生活/迈向健康生活的八大步骤.md
+++ b/source/_posts/健康生活/迈向健康生活的八大步骤.md
@@ -2,8 +2,8 @@
 title: 迈向健康生活的八大步骤
 tags: 健康
 categories: 健康生活
-cover: "https://pic.imgdb.cn/item/6550bf0dc458853aef2adab8.png"
-top_img: "https://pic.imgdb.cn/item/6550bf0dc458853aef2adab8.png"
+cover: "https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152000748.png"
+top_img: "https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152000748.png"
 ai:
   - 八个关键步骤帮助您迈向更健康的生活方式：均衡饮食、锻炼身体、充足睡眠、管理压力、建立社交关系、戒烟限酒、定期体检和积极心态。
 abbrlink: 910041ad
