--- a/source/_posts/加密文章/赠佳雯.md
+++ b/source/_posts/加密文章/赠佳雯.md
@@ -2,8 +2,8 @@
 title: 赠佳雯
 categories:
   - 加密文章
-cover: "https://pic.imgdb.cn/item/6550c05ac458853aef301141.png"
-top_img: "https://pic.imgdb.cn/item/6550c05ac458853aef301141.png"
+cover: "https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152003910.png"
+top_img: "https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152003910.png"
 password: zhangjiawen
 abstract: '有东西被加密了, 请输入密码查看.'
 message: '您好, 这里需要密码.'
