--- a/source/_posts/文学世界/抬头春草.md
+++ b/source/_posts/文学世界/抬头春草.md
@@ -5,8 +5,8 @@ date: 2023-10-29 17:21:42
 tags:
 - 诗歌
 categories: 文学世界
-top_img: "https://pic.imgdb.cn/item/6550c1f2c458853aef3726c0.png"
-cover: "https://pic.imgdb.cn/item/6550c1f2c458853aef3726c0.png"
+top_img: "https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311151950434.png"
+cover: "https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311151950434.png"
 ai: 
     - 本文探讨了抬头仰望蓝天、感受暖阳和春草的美好，以及这些简单拥抱带来的力量。它们唤醒内心，提醒我们珍惜当下，追求生活的真正美好。生活中的幸福源于这些简单而纯粹的拥抱。
 ---
