--- a/source/_posts/科技前沿/主题标签.md
+++ b/source/_posts/科技前沿/主题标签.md
@@ -7,8 +7,8 @@ categories:
   - 科技前沿
 description: 添加大量外挂标签样式。
 sticky: 100
-top_img: 'https://pic.imgdb.cn/item/6550b2a0c458853aeffd3b6b.png'
-cover: 'https://pic.imgdb.cn/item/6550b2a0c458853aeffd3b6b.png'
+top_img: 'https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152003180.png'
+cover: 'https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152003180.png'
 swiper_index: 6
 copyright: true
 copyright_author_href: 'https://blog.wuyuxi.cn/'
