--- a/source/_posts/科技前沿/图床方案汇总.md
+++ b/source/_posts/科技前沿/图床方案汇总.md
@@ -5,8 +5,8 @@ tags:
 categories:
   - 科技前沿
 description: 使用图床来存储图片
-top_img: 'https://pic.imgdb.cn/item/6550c340c458853aef3c16ce.png'
-cover: 'https://pic.imgdb.cn/item/6550c340c458853aef3c16ce.png'
+top_img: 'https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152001339.png'
+cover: 'https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152001339.png'
 ai:
   - >-
     使用图床是一种常见的图片托管解决方案，特别适用于需要在网页、博客或社交媒体上分享图片的情况。图床允许用户将图片上传到云端服务器，从而减轻了本地存储和带宽的压力，同时确保了图片的稳定可访问性。通过使用图床，用户可以轻松分享图片链接，实现快速加载和共享图像，提高了网络体验和内容传播的效率。
