优化图片速度--大改

--- a/source/_posts/健康生活/生活.md
+++ b/source/_posts/健康生活/生活.md
@@ -5,8 +5,8 @@ date: 2023-11-13 19:26:20
 tags: 生活
 categories: 健康生活
 description: 生活的意义是什么呢？
-cover: "https://cdnjson.com/images/2023/11/13/bf0ac5d6973d1b929067ff7f032e2b49.png"
-top_img: "https://cdnjson.com/images/2023/11/13/bf0ac5d6973d1b929067ff7f032e2b49.png"
+cover: "https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152052701.png"
+top_img: "https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152052701.png"
 ai:
   - 生活对于每个人来说意义不尽相同，但包括自主、能力、关系和自尊等方面的优势可以帮助理解生活的意义。家庭、配偶、孩子和健康被视为生活的支柱，而物质财富、社会地位则是重要的补充。最后，生活中琐碎而细腻的事情也是构成有意义生活的一部分，但放置顺序至关重要。清晰的人生使命和正确的信仰将赋予人生真正的意义和价值。
 ---
