--- a/source/_posts/科技前沿/主题标签.md
+++ b/source/_posts/科技前沿/主题标签.md
@@ -7,11 +7,11 @@ categories:
   - 科技前沿
 description: 添加大量外挂标签样式。
 sticky: 100
-top_img: 'https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152003180.png'
-cover: 'https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152003180.png'
+top_img: "https://s3.qjqq.cn/37/6555b001d4b5f.webp!color"
+cover: "https://s3.qjqq.cn/37/6555b001d4b5f.webp!color"
 swiper_index: 6
 copyright: true
-copyright_author_href: 'https://blog.wuyuxi.cn/'
+copyright_author_href: "https://blog.wuyuxi.cn/"
 ai:
   - >-
     这篇文章介绍了主题标签Tag
@@ -423,11 +423,6 @@ Demo 4 - 自定义 Tab 名 + 只有 icon + icon 和 Tab 名
 
 {% endtabs%}
 
-
-
-
-
-
 ## 按钮 btns
 
 {% tabs btns,3 %}
@@ -572,16 +567,16 @@ larger/留空
 <!-- endtab -->
 <!-- tab 参数配置 -->
 
-| 参数     | 含义                                                         |
-| :------- | :----------------------------------------------------------- |
-| url      | 链接                                                         |
-| text     | 按钮文字                                                     |
-| icon     | [可选] 图标，如果开启了 `fontawesome`可以使用 fontawesome 的图标，否则只能使用默内置图标 |
+| 参数     | 含义                                                                                                       |
+| :------- | :--------------------------------------------------------------------------------------------------------- |
+| url      | 链接                                                                                                       |
+| text     | 按钮文字                                                                                                   |
+| icon     | [可选] 图标，如果开启了 `fontawesome`可以使用 fontawesome 的图标，否则只能使用默内置图标                   |
 | color    | [可选] 按钮背景顔色(默认 style 时）按钮字体和边框顔色(outline 时)default/blue/pink/red/purple/orange/green |
-| style    | [可选] 按钮样式 默认实心数，outline/留空                     |
-| layout   | [可选] 按钮佈局 默认为 line block/留空                       |
-| position | [可选] 按钮位置 前提是设置了 layout 为 block 默认为左边 center/right/留空数 |
-| size     | [可选] 按钮大小 larger/留空                                  |
+| style    | [可选] 按钮样式 默认实心数，outline/留空                                                                   |
+| layout   | [可选] 按钮佈局 默认为 line block/留空                                                                     |
+| position | [可选] 按钮位置 前提是设置了 layout 为 block 默认为左边 center/right/留空数                                |
+| size     | [可选] 按钮大小 larger/留空                                                                                |
 
 <!-- endtab -->
 <!-- tab 样式预览 -->
@@ -623,7 +618,6 @@ This is my website, click the button {% btn 'https://anheyu.com/',AnZhiYu,anzhiy
 {% btn 'https://anheyu.com/',AnZhiYu,anzhiyufont anzhiyu-icon-circle-arrow-right,outline orange larger %}
 {% btn 'https://anheyu.com/',AnZhiYu,anzhiyufont anzhiyu-icon-circle-arrow-right,outline green larger %}
 </div>
-
 
 <!-- endtab -->
 <!-- tab 示例源码 -->
@@ -876,9 +870,9 @@ This is my website, click the button {% btn 'https://anheyu.com/',AnZhiYu,anzhiy
 <!-- endtab -->
 <!-- tab 参数配置 -->
 
-| 参数  | 含义                                                         |
-| :---- | :----------------------------------------------------------- |
-| text  | 文字                                                         |
+| 参数  | 含义                                                                        |
+| :---- | :-------------------------------------------------------------------------- |
+| text  | 文字                                                                        |
 | color | 【可选】背景颜色，默认为 default，default/blue/pink/red/purple/orange/green |
 
 <!-- endtab -->
@@ -927,9 +921,9 @@ xxxxx
 
 <!-- tab 参数配置 -->
 
-| 参数  | 含义                                                         |
-| :---- | :----------------------------------------------------------- |
-| title | 标题/时间线                                                  |
+| 参数  | 含义                                                                       |
+| :---- | :------------------------------------------------------------------------- |
+| title | 标题/时间线                                                                |
 | color | timeline 颜色，default(留空) / blue / pink / red / purple / orange / green |
 
 <!-- endtab -->
@@ -1112,7 +1106,7 @@ xxxxxx
 
 | 参数        | 含义                                                |
 | :---------- | :-------------------------------------------------- |
-| class_name  | h2标题                                              |
+| class_name  | h2 标题                                             |
 | flink_style | 【可选】友链样式，默认为 flexcard，flexcard/anzhiyu |
 | link_list   | 【可选】友链样式，默认为 flexcard，flexcard/anzhiyu |
 
@@ -1125,29 +1119,30 @@ xxxxxx
 - class_name: 推荐博客
   flink_style: flexcard
   link_list:
-    - name: 
-      link: https://anheyu.com/
-      avatar: https://img02.anheyu.com/adminuploads/1/2022/09/15/63232b7d91d22.jpg
-      descr: 生活明朗，万物可爱
-      siteshot: https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/anheyu.com.jpg
+
+  - name:
+    link: https://anheyu.com/
+    avatar: https://img02.anheyu.com/adminuploads/1/2022/09/15/63232b7d91d22.jpg
+    descr: 生活明朗，万物可爱
+    siteshot: https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/anheyu.com.jpg
 
 - class_name: 网站
   class_desc: 值得推荐的网站
   flink_style: anzhiyu
   link_list:
-    - name: Youtube
-      link: https://www.youtube.com/
-      avatar: https://i.loli.net/2020/05/14/9ZkGg8v3azHJfM1.png
-      descr: 视频网站
-    - name: Weibo
-      link: https://www.weibo.com/
-      avatar: https://i.loli.net/2020/05/14/TLJBum386vcnI1P.png
-      descr: 中国最大社交分享平台
-    - name: Twitter
-      link: https://twitter.com/
-      avatar: https://i.loli.net/2020/05/14/5VyHPQqR6LWF39a.png
-      descr: 社交分享平台
-      {% endflink %}
+  - name: Youtube
+    link: https://www.youtube.com/
+    avatar: https://i.loli.net/2020/05/14/9ZkGg8v3azHJfM1.png
+    descr: 视频网站
+  - name: Weibo
+    link: https://www.weibo.com/
+    avatar: https://i.loli.net/2020/05/14/TLJBum386vcnI1P.png
+    descr: 中国最大社交分享平台
+  - name: Twitter
+    link: https://twitter.com/
+    avatar: https://i.loli.net/2020/05/14/5VyHPQqR6LWF39a.png
+    descr: 社交分享平台
+    {% endflink %}
 
 <!-- endtab -->
 
@@ -1155,32 +1150,31 @@ xxxxxx
 
 ```markdown
 {% flink %}
+
 - class_name: 推荐博客
   flink_style: flexcard
   link_list:
-    - name: 
-      link: https://anheyu.com/
-      avatar: https://img02.anheyu.com/adminuploads/1/2022/09/15/63232b7d91d22.jpg
-      descr: 生活明朗，万物可爱
-      siteshot: https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/anheyu.com.jpg
+
+  - name:
+    link: https://anheyu.com/
+    avatar: https://img02.anheyu.com/adminuploads/1/2022/09/15/63232b7d91d22.jpg
+    descr: 生活明朗，万物可爱
+    siteshot: https://npm.elemecdn.com/anzhiyu-blog@1.1.6/img/post/common/anheyu.com.jpg
 
 - class_name: 网站
   class_desc: 值得推荐的网站
   flink_style: anzhiyu
-  link_list:
-    - name: Youtube
-      link: https://www.youtube.com/
-      avatar: https://i.loli.net/2020/05/14/9ZkGg8v3azHJfM1.png
-      descr: 视频网站
-    - name: Weibo
-      link: https://www.weibo.com/
-      avatar: https://i.loli.net/2020/05/14/TLJBum386vcnI1P.png
-      descr: 中国最大社交分享平台
-    - name: Twitter
-      link: https://twitter.com/
-      avatar: https://i.loli.net/2020/05/14/5VyHPQqR6LWF39a.png
-      descr: 社交分享平台
-{% endflink %}
+  link_list: - name: Youtube
+  link: https://www.youtube.com/
+  avatar: https://i.loli.net/2020/05/14/9ZkGg8v3azHJfM1.png
+  descr: 视频网站 - name: Weibo
+  link: https://www.weibo.com/
+  avatar: https://i.loli.net/2020/05/14/TLJBum386vcnI1P.png
+  descr: 中国最大社交分享平台 - name: Twitter
+  link: https://twitter.com/
+  avatar: https://i.loli.net/2020/05/14/5VyHPQqR6LWF39a.png
+  descr: 社交分享平台
+  {% endflink %}
 ```
 
 <!-- endtab -->
@@ -1190,9 +1184,8 @@ xxxxxx
 ## mermaid 图
 
 {% note blue 'anzhiyufont anzhiyu-icon-bullhorn' simple %}
-使用`mermaid标签`可以绘制Flowchart（流程图）、Sequence diagram（时序图 ）、Class Diagram（类别图）、State Diagram（状态图）、Gantt（甘特图）和Pie Chart（圆形图），具体可以查看[mermaid文档](https://mermaid.js.org/#/)
+使用`mermaid标签`可以绘制 Flowchart（流程图）、Sequence diagram（时序图 ）、Class Diagram（类别图）、State Diagram（状态图）、Gantt（甘特图）和 Pie Chart（圆形图），具体可以查看[mermaid 文档](https://mermaid.js.org/#/)
 {% endnote %}
-
 
 修改 `主题配置文件`
 
@@ -1311,10 +1304,10 @@ pie
 
 ![](https://bu.dusays.com/2023/06/01/64788b5bad729.webp)
 
-| 参数   | 含义         |
-| :----- | :----------- |
-| userId | 多吉云userId |
-| vcode  | 视频vcode    |
+| 参数   | 含义          |
+| :----- | :------------ |
+| userId | 多吉云 userId |
+| vcode  | 视频 vcode    |
 
 <!-- endtab -->
 <!-- tab 样式预览 -->
@@ -1336,7 +1329,7 @@ pie
 ## 折叠框 folding
 
 {% note blue 'anzhiyufont anzhiyu-icon-bullhorn' disabled %}
-折叠框folding
+折叠框 folding
 {% endnote %}
 
 {% tabs folding,3 %}
@@ -1482,11 +1475,11 @@ markdown 图片格式
 {% endgallery %}
 ```
 
-| 参数名    | 释义                                                         |
-| --------- | ------------------------------------------------------------ |
-| lazyload  | 【可选】点击按钮加载更多图片，填写 true/false。默认为 `false`。 |
+| 参数名    | 释义                                                                                 |
+| --------- | ------------------------------------------------------------------------------------ |
+| lazyload  | 【可选】点击按钮加载更多图片，填写 true/false。默认为 `false`。                      |
 | rowHeight | 【可选】图片显示的高度，如果需要一行显示更多的图片，可设置更小的数字。默认为 `220`。 |
-| limit     | 【可选】每次加载多少张照片。默认为 `10`。                    |
+| limit     | 【可选】每次加载多少张照片。默认为 `10`。                                            |
 
 <!-- endtab -->
 
@@ -1497,13 +1490,13 @@ markdown 图片格式
 {% endgallery %}
 ```
 
-| 参数名    | 释义                                                         |
-| --------- | ------------------------------------------------------------ |
-| url       | 【必须】 识别词                                              |
-| link      | 【必须】远程的 json 链接                                     |
-| lazyload  | 【可选】点击按钮加载更多图片，填写 true/false。默认为 `false`。 |
+| 参数名    | 释义                                                                                 |
+| --------- | ------------------------------------------------------------------------------------ |
+| url       | 【必须】 识别词                                                                      |
+| link      | 【必须】远程的 json 链接                                                             |
+| lazyload  | 【可选】点击按钮加载更多图片，填写 true/false。默认为 `false`。                      |
 | rowHeight | 【可选】图片显示的高度，如果需要一行显示更多的图片，可设置更小的数字。默认为 `220`。 |
-| limit     | 【可选】每次加载多少张照片。默认为 `10`。                    |
+| limit     | 【可选】每次加载多少张照片。默认为 `10`。                                            |
 
 > 远程链接 Json 的例子
 
@@ -1586,11 +1579,11 @@ markdown 图片格式
 {% endgallery %}
 ```
 
-| 参数名    | 释义                                                         |
-| --------- | ------------------------------------------------------------ |
-| lazyload  | 【可选】点击按钮加载更多图片，填写 true/false。默认为 `false`。 |
+| 参数名    | 释义                                                                                 |
+| --------- | ------------------------------------------------------------------------------------ |
+| lazyload  | 【可选】点击按钮加载更多图片，填写 true/false。默认为 `false`。                      |
 | rowHeight | 【可选】图片显示的高度，如果需要一行显示更多的图片，可设置更小的数字。默认为 `220`。 |
-| limit     | 【可选】每次加载多少张照片。默认为 `10`。                    |
+| limit     | 【可选】每次加载多少张照片。默认为 `10`。                                            |
 
 <!-- endtab -->
 
@@ -1601,13 +1594,13 @@ markdown 图片格式
 {% endgallery %}
 ```
 
-| 参数名    | 释义                                                         |
-| --------- | ------------------------------------------------------------ |
-| url       | 【必须】 识别词                                              |
-| link      | 【必须】远程的 json 链接                                     |
-| lazyload  | 【可选】点击按钮加载更多图片，填写 true/false。默认为 `false`。 |
+| 参数名    | 释义                                                                                 |
+| --------- | ------------------------------------------------------------------------------------ |
+| url       | 【必须】 识别词                                                                      |
+| link      | 【必须】远程的 json 链接                                                             |
+| lazyload  | 【可选】点击按钮加载更多图片，填写 true/false。默认为 `false`。                      |
 | rowHeight | 【可选】图片显示的高度，如果需要一行显示更多的图片，可设置更小的数字。默认为 `220`。 |
-| limit     | 【可选】每次加载多少张照片。默认为 `10`。                    |
+| limit     | 【可选】每次加载多少张照片。默认为 `10`。                                            |
 
 > 远程链接 Json 的例子
 
@@ -1663,7 +1656,6 @@ markdown 图片格式
 {% galleryGroup Gundam 哦咧哇gundam哒！ '/thousand/' https://bu.dusays.com/2023/06/01/64788f456fc3d.webp %}
 {% galleryGroup I-am-Akilar 某种意义上也算自拍吧 '/wallpaper/' https://bu.dusays.com/2023/06/01/64788f83e5fa1.webp %}
 </div>
-
 
 - gallery 相册
 
@@ -1721,7 +1713,7 @@ markdown 图片格式
 
 {% note blue 'anzhiyufont anzhiyu-icon-bullhorn' %}
 如果你想把一些文字、内容隐藏起来，并提供按钮让用户点击显示。可以使用这个标签外挂。
-请注意，tag-hide内的标签外挂content内都不建议有h1 - h6 等标题。因为Toc会把隐藏内容标题也显示出来，而且当滚动屏幕时，如果隐藏内容没有显示出来，会导致Toc的滚动出现异常。
+请注意，tag-hide 内的标签外挂 content 内都不建议有 h1 - h6 等标题。因为 Toc 会把隐藏内容标题也显示出来，而且当滚动屏幕时，如果隐藏内容没有显示出来，会导致 Toc 的滚动出现异常。
 {% endnote %}
 
 {% tabs tag-hide,1 %}
@@ -1730,19 +1722,19 @@ markdown 图片格式
 
 `inline` 在文本里面添加按钮隐藏内容，只限文字
 
-( content不能包含英文逗号，可用`&sbquo;`)
+( content 不能包含英文逗号，可用`&sbquo;`)
 
 ```markdown
 {% hideInline content,display,bg,color %}
 ```
 
-  - content: 文本内容
+- content: 文本内容
 
-  - display: 按钮显示的文字(可选)
+- display: 按钮显示的文字(可选)
 
-  - bg: 按钮的背景颜色(可选)
+- bg: 按钮的背景颜色(可选)
 
-  - color: 按钮文字的颜色(可选)
+- color: 按钮文字的颜色(可选)
 
 > Demo
 
@@ -1760,7 +1752,7 @@ markdown 图片格式
 
 <!-- tab Block -->
 
-`block`独立的block隐藏内容，可以隐藏很多内容，包括图片，代码块等等
+`block`独立的 block 隐藏内容，可以隐藏很多内容，包括图片，代码块等等
 
 ( display 不能包含英文逗号，可用`&sbquo;`)
 
@@ -1770,13 +1762,13 @@ content
 {% endhideBlock %}
 ```
 
-  - content: 文本内容
+- content: 文本内容
 
-  - display: 按钮显示的文字(可选)
+- display: 按钮显示的文字(可选)
 
-  - bg: 按钮的背景颜色(可选)
+- bg: 按钮的背景颜色(可选)
 
-  - color: 按钮文字的颜色(可选)
+- color: 按钮文字的颜色(可选)
 
 > Demo
 
@@ -1791,6 +1783,7 @@ content
 {% hideBlock 查看答案 %}
 傻子，怎么可能有答案
 {% endhideBlock %}
+
 <!-- endtab -->
 
 <!-- tab Toggle -->
@@ -1812,7 +1805,7 @@ content
 
 git clone -b master https://github.com/anzhiyu-c/hexo-theme-anzhiyu.git themes/anzhiyu
 
-如果想要安装比较新的dev分支，可以
+如果想要安装比较新的 dev 分支，可以
 
 git clone -b dev https://github.com/anzhiyu-c/hexo-theme-anzhiyu.git themes/anzhiyu
 
@@ -1821,7 +1814,6 @@ git clone -b dev https://github.com/anzhiyu-c/hexo-theme-anzhiyu.git themes/anzh
 <!-- endtab -->
 
 {% endtabs%}
-
 
 ## 链接卡片 link
 
@@ -1913,6 +1905,7 @@ git clone -b dev https://github.com/anzhiyu-c/hexo-theme-anzhiyu.git themes/anzh
    <!-- endtab -->
 
 <!-- tab 样式预览 -->
+
 {% tip %}default{% endtip %}
 {% tip info %}info{% endtip %}
 {% tip success %}success{% endtip %}
@@ -1926,6 +1919,7 @@ git clone -b dev https://github.com/anzhiyu-c/hexo-theme-anzhiyu.git themes/anzh
 {% tip key %}key{% endtip %}
 {% tip bell %}bell{% endtip %}
 {% tip fa-atom %}自定义 font awesome 图标{% endtip %}
+
 <!-- endtab -->
 
 <!-- tab 示例源码 -->
@@ -2003,19 +1997,19 @@ Any content (support inline tags too.io).
 
 `方法一`
 
-| 参数    | 用法                                                         |
-| :------ | :----------------------------------------------------------- |
+| 参数    | 用法                                                                                                |
+| :------ | :-------------------------------------------------------------------------------------------------- |
 | class   | 【可选】标识，不同的标识有不同的配色<br>（ default / primary / success / info / warning / danger ） |
-| no-icon | 【可选】不显示 icon                                          |
-| style   | 【可选】可以覆盖配置中的 style<br>（simple/modern/flat/disabled） |
+| no-icon | 【可选】不显示 icon                                                                                 |
+| style   | 【可选】可以覆盖配置中的 style<br>（simple/modern/flat/disabled）                                   |
 
 `方法二`
 
-| 参数    | 用法                                                         |
-| :------ | :----------------------------------------------------------- |
-| class   | 【可选】标识，不同的标识有不同的配色<br>（ default / blue / pink / red / purple / orange / green ） |
+| 参数    | 用法                                                                                                                                                |
+| :------ | :-------------------------------------------------------------------------------------------------------------------------------------------------- |
+| class   | 【可选】标识，不同的标识有不同的配色<br>（ default / blue / pink / red / purple / orange / green ）                                                 |
 | no-icon | 【可选】可配置自定义 icon (支持 fontawesome 图标和主题内置的阿里图标,`fontawesome`图标需开启主题配置文件中`icons.fontawesome`, 也可以配置 no-icon ) |
-| style   | 【可选】可以覆盖配置中的 style<br>（simple/modern/flat/disabled） |
+| style   | 【可选】可以覆盖配置中的 style<br>（simple/modern/flat/disabled）                                                                                   |
 
 <!-- endtab -->
 
@@ -2025,7 +2019,6 @@ Any content (support inline tags too.io).
 
 1. `simple`样式
 
-
 {% note simple %}默认 提示块标签{% endnote %}
 {% note default simple %}default 提示块标签{% endnote %}
 {% note primary simple %}primary 提示块标签{% endnote %}
@@ -2034,9 +2027,7 @@ Any content (support inline tags too.io).
 {% note warning simple %}warning 提示块标签{% endnote %}
 {% note danger simple %}danger 提示块标签{% endnote %}
 
-
 2. `modern`样式
-
 
 {% note modern %}默认 提示块标签{% endnote %}
 {% note default modern %}default 提示块标签{% endnote %}
@@ -2045,7 +2036,6 @@ Any content (support inline tags too.io).
 {% note info modern %}info 提示块标签{% endnote %}
 {% note warning modern %}warning 提示块标签{% endnote %}
 {% note danger modern %}danger 提示块标签{% endnote %}
-
 
 3. `flat`样式
 
