--- a/source/_posts/科技前沿/哔哩哔哩站外-外链-播放器使用文档.md
+++ b/source/_posts/科技前沿/哔哩哔哩站外-外链-播放器使用文档.md
@@ -6,8 +6,8 @@ tags:
   - 哔哩哔哩
 categories:
   - 科技前沿
-top_img: 'https://pic.imgdb.cn/item/6551dd4fc458853aef41a015.png'
-cover: 'https://pic.imgdb.cn/item/6551dd4fc458853aef41a015.png'
+top_img: 'https://s3.qjqq.cn/37/6555af64e4299.webp!color'
+cover: 'https://s3.qjqq.cn/37/6555af64e4299.webp!color'
 ai: 
   - 哔哩哔哩站外播放器允许用户在站外使用哔哩哔哩的视频播放器播放视频，需要先登录账号并在站内操作。
 ---
