--- a/source/_posts/科技前沿/无需服务器，无限空间，完全免费的图床搭建-（图文教程）.md
+++ b/source/_posts/科技前沿/无需服务器，无限空间，完全免费的图床搭建-（图文教程）.md
@@ -4,8 +4,8 @@ tags:
   - 图床
 categories:
   - 科技前沿
-top_img: 'https://telegraph-image-7gh.pages.dev/file/31c0a761d71feab2891fd.png'
-cover: 'https://telegraph-image-7gh.pages.dev/file/31c0a761d71feab2891fd.png'
+top_img: 'https://s3.qjqq.cn/37/6555aff96ebde.webp!color'
+cover: 'https://s3.qjqq.cn/37/6555aff96ebde.webp!color'
 ai:
   - >-
     图床是一个在线服务，为用户提供便捷的图像存储和分享平台。个人博客、社交媒体平台和网页设计师都能从中受益，轻松地上传、存储并在自己的网站或应用程序中链接图像。今天我要介绍的新图床项目甚至无需拥有服务器，主要利用Cloudflare
