--- a/source/_posts/健康生活/你心目中的白月光.md
+++ b/source/_posts/健康生活/你心目中的白月光.md
@@ -6,8 +6,8 @@ tags:
   - 白月光
 categories:
   - 健康生活
-top_img: 'https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152004279.png'
-cover: 'https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152004279.png'
+top_img: 'https://s3.qjqq.cn/37/6555af19e181b.webp!color'
+cover: 'https://s3.qjqq.cn/37/6555af19e181b.webp!color'
 ai: 
   - 白月光，在夜空中静静舞动，如一位悠扬的诗人，轻抚大地的梦。它是夜晚的守护者，投下柔和的光辉，照亮黑夜的神秘。在它的照耀下，世界仿佛沉浸在安宁的梦境中，让心灵在寂静中找到安宁。
 ---
