--- a/source/_posts/科技前沿/全新卡片式外链标签引入.md
+++ b/source/_posts/科技前沿/全新卡片式外链标签引入.md
@@ -6,8 +6,8 @@ tags:
   - 卡片
 categories:
   - 科技前沿
-top_img: 'https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152053561.png'
-cover: 'https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/202311152053561.png'
+top_img: 'https://s3.qjqq.cn/37/6555af889a7f0.webp!color'
+cover: 'https://s3.qjqq.cn/37/6555af889a7f0.webp!color'
 ai: 
  - 这篇文章介绍了一种全新的卡片式外链标签，它可以携带跳转链接的卡片以及不携带跳转链接的卡片。其中，携带跳转链接的卡片必须填写新品主题，并采用全新的简洁风格，使卡片主题生动明朗且可爱。未填写新品主题的卡片则没有跳转链接。
 ---
@@ -19,9 +19,9 @@ ai:
 ```
 - 必填项 `link`，`img`，`tip`
   
-{% intCard https://player.bilibili.com/player.html?bvid=BV1s94y1b7nB https://pic.imgdb.cn/item/6550e204c458853aefcd3ffc.png 白月光 全新卡片式外链标签引入 https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/avatar.png Qing 我们所爱之物昭示着我们究竟是谁。 %}
+{% intCard https://player.bilibili.com/player.html?bvid=BV1s94y1b7nB https://s3.qjqq.cn/37/6555af19e181b.webp!color 白月光 全新卡片式外链标签引入 https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/avatar.svg Qing 我们所爱之物昭示着我们究竟是谁。 %}
 
 # 不携带跳转链接的卡片
 
 - 不填写 `logo`，`title`， `subTitle`
-{% intCard https://player.bilibili.com/player.html?bvid=BV1s94y1b7nB https://pic.imgdb.cn/item/6550e204c458853aefcd3ffc.png 白月光 全新卡片式外链标签引入  %}
+{% intCard https://player.bilibili.com/player.html?bvid=BV1s94y1b7nB https://s3.qjqq.cn/37/6555af19e181b.webp!color 白月光 全新卡片式外链标签引入  %}
