优化图片，新增懒加载默认图片，优化搜索技术

--- a/source/_posts/科技前沿/全新卡片式外链标签引入.md
+++ b/source/_posts/科技前沿/全新卡片式外链标签引入.md
@@ -19,7 +19,7 @@ ai:
 ```
 - 必填项 `link`，`img`，`tip`
   
-{% intCard https://player.bilibili.com/player.html?bvid=BV1s94y1b7nB https://s3.qjqq.cn/37/6555af19e181b.webp!color 白月光 全新卡片式外链标签引入 https://cdn.jsdelivr.net/gh/yubomeng/blog-CDN@main/images/avatar.svg Qing 我们所爱之物昭示着我们究竟是谁。 %}
+{% intCard https://player.bilibili.com/player.html?bvid=BV1s94y1b7nB https://s3.qjqq.cn/37/6555af19e181b.webp!color 白月光 全新卡片式外链标签引入 https://s3.qjqq.cn/37/655779ff22313.webp!color Qing 我们所爱之物昭示着我们究竟是谁。 %}
 
 # 不携带跳转链接的卡片
 
