--- a/source/_posts/科技前沿/掌握剪辑艺术.md
+++ b/source/_posts/科技前沿/掌握剪辑艺术.md
@@ -71,8 +71,9 @@ date: 2023-11-16 21:07:11
 
 视频
 最后生成的视频可以看：
+
 <div align=center class="aspect-ratio">
-    <iframe src="//player.bilibili.com/player.html?bvid=BV1Ra4y1m7JM" scrolling="no"        border="0" frameborder="no" framespacing="0" allowfullscreen="true">
+    <iframe src="//player.bilibili.com/player.html?bvid=BV1Ra4y1m7JM" scrolling="no"        border="0" frameborder="no" framespacing="0" allowfullscreen="true" autoplay="false">
     </iframe>
 </div>
 
