--- a/source/_posts/科技前沿/掌握剪辑艺术.md
+++ b/source/_posts/科技前沿/掌握剪辑艺术.md
@@ -17,11 +17,11 @@ date: 2023-11-16 21:07:11
 
 营销号的视频神器：度加剪辑。
 
-![1700140243304.png](https://s3.qjqq.cn/37/655614d659bf2.webp!color)	
+![](https://s3.qjqq.cn/37/655614d659bf2.webp!color)	
 
 # AI成片
 
-首先我们可以去度加[度加创作工具](https://aigc.baidu.com/home)这个工具包含手机端和网页版，网页版需要百家号使用，没有百家号可以通过手机端制作视频，功能更全）
+首先我们可以去[度加创作工具](https://aigc.baidu.com/home)这个工具包含手机端和网页版，网页版需要百家号使用，没有百家号可以通过手机端制作视频，功能更全）
 
 ![](https://pic.imgdb.cn/item/655620f2c458853aef5d96e1.jpg)
 
